--- a/README.Rmd
+++ b/README.Rmd
@@ -25,20 +25,25 @@ The goal of `geocoder` is to provide geocoding service for R users.
 
 To install this package
 
+```{r eval = FALSE}
+devtools::install_github("NetZissou/geocoder")
+```
+
+
 ## Geocoding
 
 User could use `geocoding` function to obtain the spatial information from a given address. User may pass in one or multiple address all at once.
 
 The data structure returned from the `geocoding` function is specified as follows:
 
-- address: the address specified by the user
-- lat: latitude
-- lng: longitude 
-- county: county name
-- zip_geocode: zip code from the best-matched geocoding result
-- status_geocode: TRUE if a valid result is founded, otherwise FALSE
-- importance: the accuracy score from the nominatim geocoding service
-- service: the service used (nominatim is prioritize and US census API comes second)
+- `address`: the address specified by the user
+- `lat`: latitude
+- `lng`: longitude 
+- `county`: county name
+- `zip_geocode`: zip code from the best-matched geocoding result
+- `status_geocode`: `TRUE` if a valid result is founded, otherwise `FALSE`
+- `importance`: the accuracy score from the nominatim geocoding service
+- `service`: [nominatim](https://nominatim.osc.edu/ui/search.html) is prioritize and [US census API](https://geocoding.geo.census.gov/geocoder/) comes second
 
 ```{r  paged.print=FALSE}
 library(geocoder)
@@ -46,6 +51,7 @@ library(geocoder)
 address <- "Robinwood Avenue, Whitehall, Franklin County, Ohio, 43213, United States"
 result <- geocoding(address)
 result
+dplyr::glimpse(result)
 ```
 
 ```{r paged.print=FALSE}
